# llm_engineering

./: pyproject.toml
week5/: day2.ipynb  day3.ipynb
