[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.11.0",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.14",
    "openai>=1.59.7",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "plotly>=5.24.1",
    "langchain-pinecone>=0.2.2",
]
